[gd_scene load_steps=3 format=3 uid="uid://bs0loxeee3yag"]

[ext_resource type="Script" path="res://Own/Prefabs/Char/tomb.gd" id="1_p4lnq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fm6cx"]
animations = [{
"frames": [],
"loop": true,
"name": &"Spawn",
"speed": 5.0
}]

[node name="Spawn Point (Cave)" type="Node2D"]
script = ExtResource("1_p4lnq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fm6cx")
animation = &"Spawn"

[node name="Timer" type="Timer" parent="."]

[node name="SpawnTick" type="Timer" parent="."]
wait_time = 0.4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnTick" to="." method="_on_spawn_tick_timeout"]
